# oohx-poi

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  README.md  alembic.ini  docker-compose.caddy.yml  docker-compose.prod.yml  docker-compose.yml  poi-lake-CLAUDE.md  pyproject.toml
.github/workflows/: ci.yml
admin/: __init__.py  app.py
admin/lib/: __init__.py  api.py  db.py  queries.py
admin/pages/: 1_Dashboard.py  2_Sources.py  3_Ingestion_Jobs.py  4_POI_Explorer.py  5_Dedupe_Queue.py  6_Audit_Log.py  7_Brands.py  8_Raw_POIs.py  9_Crawl_Coverage.py
docker/admin/: Dockerfile
docker/api/: Dockerfile
docker/caddy/: Caddyfile
docker/grafana/dashboards/: poi-lake.json
docker/postgres/: Dockerfile  init-extensions.sql
docker/prometheus/: prometheus.yml
docs/: api-for-oohx.md  deploy.md  runbook.md
migrations/: README  env.py
migrations/versions/: 20260423_0001_initial_schema.py  20260427_0002_admin_units_and_geo.py  20260427_0003_crawl_plan.py
scripts/: backfill_admin_codes.py  backup_postgres.sh  bootstrap_vps.sh  create_api_client.py  deploy.sh  fetch_vn_districts.py  health_check.py  probe_gosom.py  push-to-oohx-poi.ps1  push-to-oohx-poi.sh  renormalize_unprocessed.py  restore_postgres.sh  seed_all.py  seed_sources.py  verify_education_search.py
src/poi_lake/: __init__.py  config.py  main.py
src/poi_lake/adapters/: __init__.py  base.py  google_places.py  gosom_scraper.py  osm_overpass.py  registry.py
tests/: conftest.py  fakes.py
tests/fixtures/: google_places_responses.py  gosom_responses.py  osm_overpass_responses.py
tests/integration/: test_brand_detector.py  test_clusterer.py  test_ingestion_service.py  test_master_pois_api.py  test_merge_service.py  test_normalize_pipeline.py
tests/unit/: test_adapter_registry.py  test_address_normalizer.py  test_api_keys.py  test_category_mapper.py  test_config.py  test_dedupe_decision.py  test_extractors.py  test_google_places_adapter.py  test_gosom_extractor.py  test_gosom_scraper_adapter.py  test_hashing.py  test_openooh_keywords.py  test_osm_overpass_adapter.py  test_phone_normalizer.py  test_quality_scorer.py  test_similarity_scorer.py  test_tile_grid.py
(+71 files in other folders)
