[project]
name = "poi-lake"
version = "0.1.0"
description = "POI data lake: multi-source ingestion, AI dedup/normalization, REST API for AdTRUE/TapON/oohx.net"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "oohx-matrix" }]

dependencies = [
    # Web / API
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "slowapi>=0.1.9,<0.2",
    "httpx>=0.27,<0.28",

    # DB
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<1.15",
    "geoalchemy2>=0.15,<0.16",
    "pgvector>=0.3.6,<0.4",

    # Settings / validation
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",

    # Queue / cache
    "dramatiq[redis]>=1.17,<2",
    "redis>=5.2,<6",

    # Pipeline
    "sentence-transformers>=3.3,<4",
    "rapidfuzz>=3.10,<4",
    "anthropic>=0.40,<1",
    "phonenumbers>=8.13,<9",
    "unidecode>=1.3,<2",

    # Ops
    "structlog>=24.4,<25",
    "prometheus-client>=0.21,<0.22",
    "cryptography>=43,<44",
]

[project.optional-dependencies]
admin = [
    "streamlit>=1.40,<2",
    "streamlit-folium>=0.23,<1",
    "folium>=0.18,<1",
    "pandas>=2.2,<3",
]
scraping = [
    "playwright>=1.48,<2",
    "beautifulsoup4>=4.12,<5",
]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=6.0,<7",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "types-redis>=4.6,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poi_lake"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["poi_lake"]

[[tool.mypy.overrides]]
module = ["geoalchemy2.*", "pgvector.*", "dramatiq.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]
